[project]
name = "protein_structure"
version = "1.0.0"
description = "An MCP server that retrieves protein information by searching UniProt for accession numbers based on human protein names, then leverages AlphaFold to provide detailed protein data and direct links to AlphaFold structural predictions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.27.2",
]
